# xgit-python

./: .gitmodules  README.md  TODO.md  setup.cfg  tox.ini
scripts/: rebuild_test_repository.sh  test.sh  test_case_safe_sync.sh
xgit/: __init__.py
xgit/cmds/: __init__.py  modify.py  summary.py  tag.py  update.py
xgit/test/: requirements.txt
xgit/test/unit/: test_cmds.py
xgit/utils/: __init__.py
xgit/utils/git/: __init__.py  config.py  execute.py  reference.py
