[metadata]
name = xgit-python
version = attr: xgit.__version__
keywords = git, GitPython, xgit
description = Git tool based on GitPython.
author = Mingzhe Zou
author_email = zoumingzhe@outlook.com
url = https://github.com/bondbox/xgit-python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
project_urls =
    Source Code = https://github.com/bondbox/xgit-python
    Bug Tracker = https://github.com/bondbox/xgit-python/issues
    Documentation = https://github.com/bondbox/xgit-python

[options]
zip_safe = True
include_package_data = True
python_requires = >=3.8
install_requires =
    xarg-python >= 1.1
    GitPython
    tabulate
packages = find:

[options.entry_points]
console_scripts =
    xgit = xgit.cmds:main

[options.packages.find]
include = xgit*
exclude =
    tests
